--- a/DashBoard/views/index.ejs
+++ b/DashBoard/views/index.ejs
@@ -22,29 +22,31 @@
 		<table>
 			<thead>
 				<tr>
+					<th>Numero de acesso</th>
 					<th>Placa</th>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Proprietario do Veículo</th>
 					<th>Entrada - Data e Hora</th>
+					<th>id_Motorista</th>
 					<th>Status do Veículo</th>
 				</tr>
 			</thead>
 			<tbody id="tabela-veiculos">
-				<% veiculos.forEach(function(veiculo) { %>
 				<% acessos.forEach(function(acesso) { %>
-				<% if (veiculo.placa === acesso.placa_veiculo) { %>
-				<tr>
-					<td><%= acesso.placa_veiculo %></td>
-					<td><%= veiculo.marca %></td>
-					<td><%= veiculo.modelo %></td>
-					<td><%= acesso.id_motorista %></td>
-					<td><%= acesso.data_hora_entrada %></td>
-					<td><%= acesso.status_veiculo %></td>
-				</tr>
-				<% } %>
-				<% }); %>
-				<% }); %>
+					<tr>
+					  <td><%= acesso.id %></td>
+					  <td><%= acesso.placa_veiculo %></td>
+					  <td><%= acesso.data_hora_entrada %></td>
+					  <td><%= acesso.id_motorista %></td>
+					  <td>
+						<% if (acesso.status_veiculo === 1) { %>
+						  Aprovado
+						<% } else if (acesso.status_veiculo === 2) { %>
+						  Não aprovado
+						<% } else if (acesso.status_veiculo === 3) { %>
+						  Não identificado
+						<% } %>
+					  </td>
+					</tr>
+				  <% }); %>				  
 			</tbody>
 		</table>
 		<div class="filter">
@@ -67,70 +69,41 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script>
 	function atualizarDadosVeiculos() {
-		$.ajax({
-			url: '/veiculos',
-			method: 'GET',
-			dataType: 'json',
-			success: function (dataVeiculos) {
-				$.ajax({
-					url: '/acessos',
-					method: 'GET',
-					dataType: 'json',
-					success: function (dataAcessos) {
-						$.ajax({
-							url: '/motoristas',
-							method: 'GET',
-							dataType: 'json',
-							success: function (dataMotoristas) {
-								$('#tabela-veiculos').empty();
-								dataAcessos.forEach(function (acesso) {
-									var veiculo = dataVeiculos.find(function (
-										veiculo) {
-										return veiculo.placa === acesso
-											.placa_veiculo;
-									});
-									var motorista = dataMotoristas.find(
-										function (motorista) {
-											return motorista.id === acesso
-												.id_motorista;
-										});
-									if (veiculo && motorista) {
-										var dataEntradaFormatada = moment(
-												acesso.data_hora_entrada)
-											.format('DD/MM/YYYY HH:mm:ss');
-
-										var linha = '<tr>' +
-											'<td>' + acesso.placa_veiculo +
-											'</td>' +
-											'<td>' + veiculo.marca + '</td>' +
-											'<td>' + veiculo.modelo + '</td>' +
-											'<td>' + motorista.nome + '</td>' +
-											'<td>' + dataEntradaFormatada +
-											'</td>' +
-											'<td>' + acesso.status_veiculo +
-											'</td>' +
-											'</tr>';
-										$('#tabela-veiculos').append(linha);
-									}
-								});
-							},
-							error: function (error) {
-								console.error('Erro na requisição de motoristas:',
-									error);
-							}
-						});
-					},
-					error: function (error) {
-						console.error('Erro na requisição de acessos:', error);
-					}
-				});
-			},
-			error: function (error) {
-				console.error('Erro na requisição de veículos:', error);
-			}
-		});
-	}
-
+  $.ajax({
+    url: '/acessos',
+    method: 'GET',
+    dataType: 'json',
+    success: function(dataAcessos) {
+      $('#tabela-veiculos').empty();
+      dataAcessos.forEach(function(acesso) {
+        var dataEntradaFormatada = moment(acesso.data_hora_entrada).format('DD/MM/YYYY HH:mm:ss');
+        var statusVeiculo = getStatusVeiculo(acesso.status_veiculo);
+        var linha = '<tr>' +
+          '<td>' + acesso.id + '</td>' +
+          '<td>' + acesso.placa_veiculo + '</td>' +
+          '<td>' + dataEntradaFormatada + '</td>' +
+          '<td>' + acesso.id_motorista + '</td>' +
+          '<td>' + statusVeiculo + '</td>' +
+          '</tr>';
+        $('#tabela-veiculos').append(linha);
+      });
+    },
+    error: function(error) {
+      console.error('Erro na requisição de acessos:', error);
+    }
+  });
+}
+function getStatusVeiculo(status) {
+  if (status === 1) {
+    return 'Aprovado';
+  } else if (status === 2) {
+    return 'Não aprovado';
+  } else if (status === 3) {
+    return 'Não identificado';
+  } else {
+    return 'Status desconhecido';
+  }
+}
 	atualizarDadosVeiculos();
 
 	setInterval(atualizarDadosVeiculos, 30000);
